--- a/public/app-assets/css/components.css
+++ b/public/app-assets/css/components.css
@@ -3515,8 +3515,8 @@ div.dataTables_wrapper {
   div.dataTables_wrapper div.dataTables_filter label {
     margin-top: 1rem; }
   div.dataTables_wrapper div.dataTables_paginate ul.pagination {
-    margin: 10px 0; }
-
+    /* margin: 10px 0;  */
+    margin: 0px;}
 td.highlight {
   font-weight: bold;
   color: #666EE8;
